--- a/index.html
+++ b/index.html
@@ -238,32 +238,32 @@
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-thumbnail all photography">
-              <a class="popup-img" href="images/portfolio/2.jpg">
-                <img src="images/portfolio/2.jpg"  alt="img">
+              <a class="popup-img" href="images/portfolio/2.jpeg">
+                <img src="images/portfolio/2.jpeg"  alt="img">
               </a>
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-thumbnail all photography">
-              <a class="popup-img" href="images/portfolio/3.jpg">
-                <img src="images/portfolio/3.jpg" alt="img">
+              <a class="popup-img" href="images/portfolio/3.jpeg">
+                <img src="images/portfolio/3.jpeg" alt="img">
               </a>
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-thumbnail all photography">
-              <a class="popup-img" href="images/portfolio/4.jpg">
-                <img src="images/portfolio/4.jpg" alt="img">
+              <a class="popup-img" href="images/portfolio/4.jpeg">
+                <img src="images/portfolio/4.jpeg" alt="img">
               </a>
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-thumbnail all photography">
-              <a class="popup-img" href="images/portfolio/5.jpg">
-                <img src="images/portfolio/5.jpg" alt="img">
+              <a class="popup-img" href="images/portfolio/5.jpeg">
+                <img src="images/portfolio/5.jpeg" alt="img">
               </a>
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-thumbnail all photography">
-              <a class="popup-img" href="images/portfolio/6.jpg">
-                <img src="images/portfolio/6.jpg" alt="img">
+              <a class="popup-img" href="images/portfolio/6.jpeg">
+                <img src="images/portfolio/6.jpeg" alt="img">
               </a>
 
             </div>
@@ -274,8 +274,8 @@
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-thumbnail all photography">
-              <a class="popup-img" href="images/portfolio/8.jpg">
-                <img src="images/portfolio/8.jpg" alt="img">
+              <a class="popup-img" href="images/portfolio/8.jpeg">
+                <img src="images/portfolio/8.jpeg" alt="img">
               </a>
             </div>
 
