--- a/index.html
+++ b/index.html
@@ -112,7 +112,16 @@
   </div>
   <!-- end section about us -->
 
-  
+
+  <section id="contact" class="contact">
+    <div class="container" data-aos="fade-up">
+
+      <div>
+        <iframe style="border:0; width: 100%; height: 340px;" src="https://www.youtube.com/embed/GIEB9_mw_l8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      </div><!-- End Google Maps -->
+      <iframe src="" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+    </div>
  
 
   <section id="contact" class="contact">
@@ -125,6 +134,7 @@
       <iframe src="" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
     </div>
+
 
 
 
