--- a/index.html
+++ b/index.html
@@ -117,9 +117,10 @@
     <div class="container" data-aos="fade-up">
 
       <div>
-        <iframe style="border:0; width: 100%; height: 340px;" src="https://www.youtube.com/embed/GIEB9_mw_l8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      <!--iframe style="border:0; width: 100%; height: 340px;" src="https://www.youtube.com/embed/GIEB9_mw_l8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe-->
+      <iframe width="600" height="450" src="https://www.youtube.com/embed/GIEB9_mw_l8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
       </div><!-- End Google Maps -->
-      <iframe src="" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <!--iframe src="" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe-->
 
     </div>
  
